Fix fonction getFirst > get(0)